--- a/index.html
+++ b/index.html
@@ -5,23 +5,9 @@
 	<title>
 		Mahmut's Github Page
 	</title>
-	   <style type="text/css">
-		h1	{
-			 font-size: 24pt ;
-			 color: red;
-			 text-decoration: underline;
-			 font family: tahoma, helvetica, sans-serif;
-			}
-		em	{
-			 font-style: normal;
-			 color: green;
-			 background-color: lightgrey;
-			 font-weight: bold;
-			}
-
-			 
-	   </style>
-
+	  
+	<link rel="stylesheet" type="text/css" href="./all.css"/>
+	
 	   </head>
 
 
