--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		Mahmut's Github Page
 	</title>
 	  
-	<link rel="stylesheet" type="text/css" href="./all.css"/>
+	<link rel="stylesheet" type="text/css" href="./15_11_2021.css"/>
 	
 	   </head>
 
